--- a/index.css
+++ b/index.css
@@ -1,92 +1,3 @@
-body{
-    padding:0;
-    margin:0;
-    box-sizing: border-box;
-}
-.main_header{
-    display:flex;
-    background:linear-gradient(to right,#EC9F05 , #FF4E00);
-    justify-content: space-between;
-    align-items: center;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-    height:5vw;
-}
-.img{
-    width: 6vw;
-    height:4.5vw;
-    margin-left:20vw;
-}
- .header_elements > ul{
-    list-style: none;
-    display:flex;
-    gap:3vw;
-    font-size:18px ;
-    margin-right:10vw;
- }
-
- .body_items{
-    width:20vw;
-    gap:3px;
-    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
-    padding:10px;
-    margin-left:40px;
-    margin-right:40px;
-    margin-top:50px;
-    transition: all 0.5s ease-out;
- }
- .inner_items > h4 {
-    font-weight: lighter;
-    font-size: 15px;
-    overflow-wrap:break-word;
- }
- .body_items img{
-    width:100%;
- }
-.dinner_list{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.body_items:hover {
-    width:22vw;
-}
-.price{
-    display: flex;
-    gap:10vw;
-}
-.price > h4 {
-    font-weight: lighter;
-}
-
-.search_box{
-    display: flex;
-    margin-left:35vw;
-    padding:20px;
-    gap:10px;
-}
-.search_box >button {
-    padding: 0.3vw;
-    background-color: rgb(83, 80, 148);
-    border:none;
-    color:white;
-}
-.search_box >input {
-    width:20vw;
-    height: 2.5vw;
-    border-radius:5px;
-    border:2px solid black;
-}
-.search_box >button:hover{
- padding: 0.5vw;  
-}
-
-.shimmer{
-    width:20vw;
-    gap:3px;
-    height: 20vw;
-    background-color: #D6D8DA;
-    padding:10px;
-    margin-left:40px;
-    margin-right:40px;
-    margin-top:100px;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
